# zero-problem

./: .gitignore  README.md
docs/: Go_Elf1_10K.html  index.html
docs/Htmls/: how_to_build.html  user_guide_ja.html
docs/Licenses/: license.html
for_readme/: AlphaGo-LeeSedol-1.sgf
src/: CMakeLists.txt  CMakeLists_txt.py  Command.h  GenerateHtml.cpp  GenerateHtml.h  Main.cpp  MainWindow.cpp  MainWindow.h  MergeHtmlDialog.cpp  MergeHtmlDialog.h  SettingDialog.cpp  SettingDialog.h  StringUtil.cpp  TODO.md  TimeString.cpp  ZeroProblem.sln  ZeroProblem.vcxproj  ZeroProblem.vcxproj.filters  analysis.cpp  analysis.h  board.cpp  board.h  color.h  coordinate.cpp  coordinate.h  exit_status.h  game.cpp  game.h  gtp_lz.cpp  gtp_lz.h  gtp_lz_stub.cpp  gtp_lz_stub.h  html.cpp  html.h  illustration.cpp  illustration.h  job.cpp  job.h  job_list.cpp  job_list.h  (+22 more)
src/Htmls/: how_to_build.md  md_to_html.py  user_guide.html  user_guide.md  user_guide_ja.md
src/Licenses/: license.html
src/Locale/ja/: zproblem.mo  zproblem.po
src/Resources/: Zero Problem.desktop  app_ico_xpm.xpm  make_icons.py
src/Scripts/: html_cpp_txt.py  load_problems.js
src/Test/: Test.vcxproj  Test.vcxproj.filters  test_analysis.cpp  test_board.cpp  test_coordinate.cpp  test_game.cpp  test_main.cpp  test_range.cpp  test_string_util.cpp
zip/: README.html  settings32.txt  settings64.txt  zip.bat
